[gd_scene load_steps=11 format=3 uid="uid://dyuxdex5ctdql"]

[ext_resource type="Script" path="res://Player.gd" id="1_w5jo6"]
[ext_resource type="PackedScene" uid="uid://iuu6y0j6wwsx" path="res://player_gui.tscn" id="2_lq8ed"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_npesi"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_e2bnt"]
material = SubResource("StandardMaterial3D_npesi")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4qm1x"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_75k75"]
height = 0.5

[sub_resource type="Animation" id="Animation_wq4yx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xq60t"]
resource_name = "crouch"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}

[sub_resource type="Animation" id="Animation_js74t"]
resource_name = "uncrouch"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ucl85"]
_data = {
"RESET": SubResource("Animation_wq4yx"),
"crouch": SubResource("Animation_xq60t"),
"uncrouch": SubResource("Animation_js74t")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_w5jo6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_e2bnt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_4qm1x")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, 0)
shape = SubResource("CylinderShape3D_75k75")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="InteractionCast" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -3)

[node name="Hand" type="Node3D" parent="Head"]

[node name="PlayerGui" parent="." instance=ExtResource("2_lq8ed")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ucl85")
}

[connection signal="correct_value_entered" from="PlayerGui" to="." method="_on_player_gui_correct_value_entered"]
